Set new default JRE args.  Existing users that have not changed it from blank will receive the new default.  Intentionally changing it to blank in the GUI options will be stored as a single space, and editing the json file directly to be an empty string will result in the default being applied.
Increased the default memory value to 4GB